--- a/2.html
+++ b/2.html
@@ -1,3 +1,12 @@
+<h1>Environment Map</h1>
+
+<div id="map" style="height: 400px"></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
+<script src="map.js">;</script>
+
+<h1>Polluter Map</h1>
+
 <div id="map" style="height: 400px"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
