--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<h1>Environment Map</h1>
+<html>
+  <head>
 
-<div id="map" style="height: 400px"></div>
+    <title>OPENSTREETMAP - Environmental racism in Canada / Racisme environnemental au Canada</title>
+    <link rel="stylesheet" href="style.css">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
-<script src="map.js">;</script>
+  </head>
 
-<h1>Polluter Map</h1>
+  <body>
 
-<div id="map" style="height: 400px"></div>
+    <h1>OPENSTREETMAP - Environmental racism in Canada / Racisme environnemental au Canada</h1>
+     
+    <div class="choixdelangue">
+	<a href="english.html">English</a>
+        <a href="français.html">Français</a>		
+		
+  </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol.js" integrity="sha256-77IKwU93jwIX7zmgEBfYGHcmeO0Fx2MoWB/ooh9QkBA=" crossorigin="anonymous"></script>
-<script src="map.js">;</script>
+</html>
