--- a/english.html
+++ b/english.html
@@ -14,7 +14,8 @@
 	<a href="about.html">About</a>
 	<a href="pollution.html">Pollution and environmental racism</a>
 	<a href="natural_phen.html">Natural phenomena and environmental racism</a>
-	
-  </body>
+    </div> 	
+  
+    </body>
 
 </html>
