--- a/français.html
+++ b/français.html
@@ -3,33 +3,19 @@
 
     <title>OPENSTREETMAP - Racisme environnemental au Canada</title>
     <link rel="stylesheet" href="style.css">
-    <style type = "text/css">
-     h2
-     {text-align: center;
-     font-familly: "Times New Roman";
-     font-size: 30px;
-      }
-     .souspage   
-     {padding-top: 200xp;
-     text-align: center;
-     font-familly: "Times New Roman";
-     font-size: 25px;
-     color: #000000;
-      }
-    </style>
-
+   
   </head>
 
   <body>
 
     <h2>OPENSTREETMAP - Racisme environnemental au Canada</h2>
        
-			<div class="souspage">
-					<a href="/propro">À propos</a>
-					<a href="/pollution">Pollution et racisme environnemental</a>
-					<a href="/natural_phen">Phénomènes naturels et racisme environnemental</a>
-
-
-  </body>
+    <div class="souspage">
+	<a href="apropos.html">À propos</a>
+	<a href="pollution.fr.html">Pollution et racisme environnemental</a>
+	<a href="phen_naturel.html">Phénomènes naturels et racisme environnemental</a>
+    </div> 	
+  
+    </body>
 
 </html>
