--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="choixdelangue">
 	<a href="english.html">English</a>
         <a href="français.html">Français</a>		
-		
+    </div> 	
+	
   </body>
 
 </html>
