--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+  <html lang="fr">
   <head>
 
     <title>OPENSTREETMAP - Environmental racism in Canada / Racisme environnemental au Canada</title>
@@ -13,8 +14,15 @@
     <div class="choixdelangue">
 	<a href="english.html">English</a>
         <a href="français.html">Français</a>		
-    </div> 	
+    </div> 
+
+    <img src="sarnia.jpg" alt="Chemical Alley" style="padding-top: 100px; padding-bottom: 100px">	
 	
+    <div class="source">
+        <p>Toledano, M. (année). s.n. [Image on line]. Retrieved from https://www.vice.com/en_ca/article/vdy948/a-toxic-tour-of-canadas-chemical-valley</p>
+        <p>Toledano, M. (année). s.n. [Image en ligne]. Repéré à https://www.vice.com/en_ca/article/vdy948/a-toxic-tour-of-canadas-chemical-valley</p>
+    </div>
+
   </body>
 
 </html>
