--- a/phen_naturel.html
+++ b/phen_naturel.html
@@ -22,4 +22,14 @@
 	     <h3>Phénomènes naturels et racisme environnemental</h3>
     </div> 
 
+    <div classe="acronyme"
+     <h4>Acronyme utilisé</h4>
+    </div>             
+    
+    <div class="text">             
+             <ul>
+                 <li>CAD : dollar canadien</li>
+             </ul>  
+    </div> 
+
   </body>
