--- a/pollution.fr.html
+++ b/pollution.fr.html
@@ -22,4 +22,20 @@
 	     <h3>Pollution et racisme environnemental</h3>
     </div> 
 
+<div classe="acronymes"
+     <h4>Acronymes utilisés</h4>
+  </div>             
+    
+    <div class="text">             
+             <ul>
+                 <li>CAD : dollar canadien</li>
+                 <li>kT CO2 eq : kilotonnes d’équivalent dioxyde de carbone</li> 
+                 <li>CAC : critères des contaminants de l’air</li>
+                 <li>T : tonne</li>
+                 <li>ppb : partie par milliard</li>
+                 <li>ug : microgramme</li>
+                 <li>m^3 : mètre cube</li>
+             </ul>  
+    </div>    
+
   </body>
