--- a/pollution.html
+++ b/pollution.html
@@ -20,6 +20,22 @@
 	     <h3>Pollution and environmental racism</h3>
     </div> 
 
+    <div classe="acronyms"
+     <h4>Acronyms used</h4>
+    </div>             
+    
+    <div class="text">             
+             <ul>
+                 <li>CAD : Canadian dollar</li>
+                 <li>kT CO2 eq : kilotons carbon dioxide equivalent</li> 
+                 <li>CAC : criteria air contaminants</li>
+                 <li>T : ton</li>
+                 <li>ppb : part per billion</li>
+                 <li>ug : microgram</li>
+                 <li>m^3 : cube meter</li>
+             </ul>  
+    </div> 
+
   </body>
 
 </html>			
