--- a/natural_phen.html
+++ b/natural_phen.html
@@ -20,4 +20,15 @@
 	     <h3>Natural phenomena and environmental racism</h3>
     </div> 
 
+ <div classe="acronym"
+     <h4>Acronym used</h4>
+    </div>             
+    
+    <div class="text">             
+             <ul>
+                 <li>CAD : Canadian dollar</li>
+             </ul>  
+    </div> 
+
   </body>
+<html>
