--- a/phen_naturel.html
+++ b/phen_naturel.html
@@ -1,8 +1,9 @@
-<!doctype html>
+ï»¿<!doctype html>
   <html lang="fr">
 
   <head>
 
+    <meta charset="utf-8"/>
     <title>OPENSTREETMAP - Racisme environnemental au Canada</title>
     <link rel="stylesheet" href="style.css">
 
@@ -13,17 +14,17 @@
     <h2>OPENSTREETMAP - Racisme environnemental au Canada</h2>
        
     <div class="souspage">
-	     <a href="apropos.html">À propos</a>
-	     <a href="pollution.fr.html">Pollution et racisme environnemental</a>
-	     <a href="phen_naturel.html">Phénomènes naturels et racisme environnemental</a>    
+	     <a href="apropos.html">Ã€ propos</a>
+	     <a href="pollution_fr.html">Pollution et racisme environnemental</a>
+	     <a href="phen_naturel.html">PhÃ©nomÃ¨nes naturels et racisme environnemental</a>    
     </div> 
  
     <div class="phen_naturel">
-	     <h3>Phénomènes naturels et racisme environnemental</h3>
+	     <h3>PhÃ©nomÃ¨nes naturels et racisme environnemental</h3>
     </div> 
 
     <div classe="acronyme"
-     <h4>Acronyme utilisé</h4>
+     <h4>Acronyme utilisÃ©</h4>
     </div>             
     
     <div class="text">             
