--- a/pollution_fr.html
+++ b/pollution_fr.html
@@ -1,8 +1,9 @@
-<!doctype html>
+ï»¿<!doctype html>
   <html lang="fr">
 
   <head>
 
+    <meta charset="utf-8"/>
     <title>OPENSTREETMAP - Racisme environnemental au Canada</title>
     <link rel="stylesheet" href="style.css">
 
@@ -13,9 +14,9 @@
     <h2>OPENSTREETMAP - Racisme environnemental au Canada</h2>
        
     <div class="souspage">
-	     <a href="apropos.html">À propos</a>
-	     <a href="pollution.fr.html">Pollution et racisme environnemental</a>
-	     <a href="phen_naturel.html">Phénomènes naturels et racisme environnemental</a>    
+	     <a href="apropos.html">Ã€ propos</a>
+	     <a href="pollution_fr.html">Pollution et racisme environnemental</a>
+	     <a href="phen_naturel.html">PhÃ©nomÃ¨nes naturels et racisme environnemental</a>    
     </div> 
  
     <div class="pollution.fr">
@@ -23,18 +24,18 @@
     </div> 
 
 <div classe="acronymes"
-     <h4>Acronymes utilisés</h4>
+     <h4>Acronymes utilisÃ©s</h4>
   </div>             
     
     <div class="text">             
              <ul>
                  <li>CAD : dollar canadien</li>
-                 <li>kT CO2 eq : kilotonnes d’équivalent dioxyde de carbone</li> 
-                 <li>CAC : critères des contaminants de l’air</li>
+                 <li>kT CO2 eq : kilotonnes dâ€™Ã©quivalent dioxyde de carbone</li> 
+                 <li>CAC : critÃ¨res des contaminants de lâ€™air</li>
                  <li>T : tonne</li>
                  <li>ppb : partie par milliard</li>
                  <li>ug : microgramme</li>
-                 <li>m^3 : mètre cube</li>
+                 <li>m^3 : mÃ¨tre cube</li>
              </ul>  
     </div>    
 
