--- a/apropos.html
+++ b/apropos.html
@@ -1,8 +1,9 @@
-<!doctype html>
+ï»¿<!doctype html>
   <html lang="fr">
 
   <head>
 
+    <meta charset="utf-8"/>
     <title>OPENSTREETMAP - Racisme environnemental au Canada</title>
     <link rel="stylesheet" href="style.css">
 
@@ -13,25 +14,25 @@
     <h2>OPENSTREETMAP - Racisme environnemental au Canada</h2>
        
     <div class="souspage">
-	     <a href="apropos.html">À propos</a>
-	     <a href="pollution.fr.html">Pollution et racisme environnemental</a>
-	     <a href="phen_naturel.html">Phénomènes naturels et racisme environnemental</a>    
+	     <a href="apropos.html">Ã€ propos</a>
+	     <a href="pollution_fr.html">Pollution et racisme environnemental</a>
+	     <a href="phen_naturel.html">PhÃ©nomÃ¨nes naturels et racisme environnemental</a>    
     </div> 
  
     <div class="apropos">
-	     <h3>À propos</h3>
+	     <h3>Ã€ propos</h3>
     </div> 
 
     <div class="text">
-		<p>C’est dans les années 1980 aux États-Unis que les premières études sur le racisme environnemental ont été faites et il a été remarqué que les communautés afro-américaines ainsi que les autres minorités et habitants des secteurs pauvres avaient davantage de chance de résider à proximité de manufactures, de dépotoires ou encore des sites d’enfouissement de matières dangereuses (Séguin & Apparicio, 2013 ; Lumen : Sociology, s.d.). Depuis, les chercheurs ont analysé plus en profondeur le sujet et différentes définitions et types de justice ont été développés.</p> 
+		<p>Câ€™est dans les annÃ©es 1980 aux Ã‰tats-Unis que les premiÃ¨res Ã©tudes sur le racisme environnemental ont Ã©tÃ© faites et il a Ã©tÃ© remarquÃ© que les communautÃ©s afro-amÃ©ricaines ainsi que les autres minoritÃ©s et habitants des secteurs pauvres avaient davantage de chance de rÃ©sider Ã  proximitÃ© de manufactures, de dÃ©potoires ou encore des sites dâ€™enfouissement de matiÃ¨res dangereuses (SÃ©guin & Apparicio, 2013 ; Lumen : Sociology, s.d.). Depuis, les chercheurs ont analysÃ© plus en profondeur le sujet et diffÃ©rentes dÃ©finitions et types de justice ont Ã©tÃ© dÃ©veloppÃ©s.</p> 
     </div>
 
-    <img src="philippines.png" alt="déchets" style="float:right; padding: 25px;">
+    <img src="philippines.png" alt="dÃ©chets" style="float:right; padding: 25px;">
 
     <div class="text">	        
-                <p>Le terme racisme environnemental est utilisé afin de décrire des situations discriminatoires de natures environnementales envers certains groupes d’individus engendrant des problèmes de santé (Lumen : Sociology, s.d.). Il est important de noter que ces discriminations peuvent être volontaires, mais elles sont surtout non-intentionnelles (Fondation canadienne des relations sociales, 2015). Toutefois, après un préjudice, l’inaction d’un gouvernement peut être mal perçue, comme il a été le cas avec l’eau contaminée de la ville de Flint au Michigan. Le contexte nord-sud a lui aussi été analysé et des disparités outrageuses ont été révélées. Aujourd’hui, avec la question des changements climatiques, le racisme environnemental a aussi été lié au réchauffement climatique et à ses effets et il a été montré que les communautés présentant des difficultés financières sont les moins résilientes face aux changements climatiques. De plus, dans bien des cas, ce sont rarement ceux affectés par la pollution                 qui sont les vecteurs premiers de celle-ci.</p> 
-	        <p>Basées sur ces études, plusieurs cartes ont été faites et nous avons pensé qu’il serait pertinent d’évaluer ce même phénomène ici au Canada. Ainsi, ce site a pour but de mettre en lumière le racisme environnemental au Canada afin d’établir des mesures et lois permettant d’atteindre une justice environnementale à travers le pays.</p> 
-	        <p>Sur ce site, vous trouverez deux différentes cartes. Les deux d’entre elles présentent les mêmes aspects sociaux, comme les revenus par district ou encore les minorités visibles par district, mais la première est axé sur la pollution alors que la seconde sur les phénomènes naturels (qui peuvent être causés par les activités humaines). Nous avons aussi ajouté les données de ce qu’appelle le gouvernement canadien Climate Action, un programme de financement fédéral octroyé à des projets visant la prévention et la mitigation des changements climatiques (Gouvernement du Canada, 2019).</p>
+                <p>Le terme racisme environnemental est utilisÃ© afin de dÃ©crire des situations discriminatoires de natures environnementales envers certains groupes dâ€™individus engendrant des problÃ¨mes de santÃ© (Lumen : Sociology, s.d.). Il est important de noter que ces discriminations peuvent Ãªtre volontaires, mais elles sont surtout non-intentionnelles (Fondation canadienne des relations sociales, 2015). Toutefois, aprÃ¨s un prÃ©judice, lâ€™inaction dâ€™un gouvernement peut Ãªtre mal perÃ§ue, comme il a Ã©tÃ© le cas avec lâ€™eau contaminÃ©e de la ville de Flint au Michigan. Le contexte nord-sud a lui aussi Ã©tÃ© analysÃ© et des disparitÃ©s outrageuses ont Ã©tÃ© rÃ©vÃ©lÃ©es. Aujourdâ€™hui, avec la question des changements climatiques, le racisme environnemental a aussi Ã©tÃ© liÃ© au rÃ©chauffement climatique et Ã  ses effets et il a Ã©tÃ© montrÃ© que les communautÃ©s prÃ©sentant des difficultÃ©s financiÃ¨res sont les moins rÃ©silientes face aux changements climatiques. De plus, dans bien des cas, ce sont rarement ceux affectÃ©s par la pollution                 qui sont les vecteurs premiers de celle-ci.</p> 
+	        <p>BasÃ©es sur ces Ã©tudes, plusieurs cartes ont Ã©tÃ© faites et nous avons pensÃ© quâ€™il serait pertinent dâ€™Ã©valuer ce mÃªme phÃ©nomÃ¨ne ici au Canada. Ainsi, ce site a pour but de mettre en lumiÃ¨re le racisme environnemental au Canada afin dâ€™Ã©tablir des mesures et lois permettant dâ€™atteindre une justice environnementale Ã  travers le pays.</p> 
+	        <p>Sur ce site, vous trouverez deux diffÃ©rentes cartes. Les deux dâ€™entre elles prÃ©sentent les mÃªmes aspects sociaux, comme les revenus par district ou encore les minoritÃ©s visibles par district, mais la premiÃ¨re est axÃ© sur la pollution alors que la seconde sur les phÃ©nomÃ¨nes naturels (qui peuvent Ãªtre causÃ©s par les activitÃ©s humaines). Nous avons aussi ajoutÃ© les donnÃ©es de ce quâ€™appelle le gouvernement canadien Climate Action, un programme de financement fÃ©dÃ©ral octroyÃ© Ã  des projets visant la prÃ©vention et la mitigation des changements climatiques (Gouvernement du Canada, 2019).</p>
                 </br> 
                 </br>  
     </div> 
@@ -42,11 +43,11 @@
     
     <div class="text">             
              <ul>
-                <li>Clement, G. (2019). s.n. [Image en ligne]. Repéré à https://nationalpost.com/news/politics/would-the-philippines-declare-war-on-canada-over-a-pile-of-garbage-or-is-it-just-a-symbolic-pissing-contest</li> 
-                <li>Fondation canadienne des relations sociales. (2015). Racisme environnemental. Repéré à https://www.crrf-fcrr.ca/fr/bibliotheque/glossaire-fr-fr-1/item/22972-racisme-environnemental</li>
-                <li>Gouvernement du Canada. (2019). Climate action map. Repéré à https://climate-change.canada.ca/climate-action-map/App/index?GOCTemplateCulture=en-CA</li>
-                <li>Lumen : Sociology. (s.d.). Environmental racism. Repéré à https://courses.lumenlearning.com/alamo-sociology/chapter/reading-environmental-racism/</li>  
-                <li>Séguin, A.-M. & Apparicio, P. (2013). Justice environnementale. Cahiers de géographie du Québec, 57(161), p. 211-214. doi: https://doi.org/10.7202/1024901ar</li>
+                <li>Clement, G. (2019). s.n. [Image en ligne]. RepÃ©rÃ© Ã  https://nationalpost.com/news/politics/would-the-philippines-declare-war-on-canada-over-a-pile-of-garbage-or-is-it-just-a-symbolic-pissing-contest</li> 
+                <li>Fondation canadienne des relations sociales. (2015). Racisme environnemental. RepÃ©rÃ© Ã  https://www.crrf-fcrr.ca/fr/bibliotheque/glossaire-fr-fr-1/item/22972-racisme-environnemental</li>
+                <li>Gouvernement du Canada. (2019). Climate action map. RepÃ©rÃ© Ã  https://climate-change.canada.ca/climate-action-map/App/index?GOCTemplateCulture=en-CA</li>
+                <li>Lumen : Sociology. (s.d.). Environmental racism. RepÃ©rÃ© Ã  https://courses.lumenlearning.com/alamo-sociology/chapter/reading-environmental-racism/</li>  
+                <li>SÃ©guin, A.-M. & Apparicio, P. (2013). Justice environnementale. Cahiers de gÃ©ographie du QuÃ©bec, 57(161), p. 211-214. doi: https://doi.org/10.7202/1024901ar</li>
             </ul>  
     </div> 				
 
