--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+ï»¿<!doctype html>
   <html lang="fr">
   <head>
-
+    
+    <meta charset="utf-8"/>
     <title>OPENSTREETMAP - Environmental racism in Canada / Racisme environnemental au Canada</title>
     <link rel="stylesheet" href="style.css">
 
@@ -13,14 +14,14 @@
      
     <div class="choixdelangue">
 	<a href="english.html">English</a>
-        <a href="français.html">Français</a>		
+        <a href="francais.html">FranÃ§ais</a>		
     </div> 
 
     <img src="sarnia.jpg" alt="Chemical Alley" style="padding-top: 100px; padding-bottom: 100px">	
 	
     <div class="source">
-        <p>Toledano, M. (année). s.n. [Image on line]. Retrieved from https://www.vice.com/en_ca/article/vdy948/a-toxic-tour-of-canadas-chemical-valley</p>
-        <p>Toledano, M. (année). s.n. [Image en ligne]. Repéré à https://www.vice.com/en_ca/article/vdy948/a-toxic-tour-of-canadas-chemical-valley</p>
+        <p>Toledano, M. (annÃ©e). s.n. [Image on line]. Retrieved from https://www.vice.com/en_ca/article/vdy948/a-toxic-tour-of-canadas-chemical-valley</p>
+        <p>Toledano, M. (annÃ©e). s.n. [Image en ligne]. RepÃ©rÃ© Ã  https://www.vice.com/en_ca/article/vdy948/a-toxic-tour-of-canadas-chemical-valley</p>
     </div>
 
   </body>
