--- a/francais.html
+++ b/francais.html
@@ -1,6 +1,7 @@
-<html>
+ï»¿<html>
   <head>
 
+    <meta charset="utf-8"/>
     <title>OPENSTREETMAP - Racisme environnemental au Canada</title>
     <link rel="stylesheet" href="style.css">
    
@@ -11,9 +12,9 @@
     <h2>OPENSTREETMAP - Racisme environnemental au Canada</h2>
        
     <div class="souspage">
-	<a href="apropos.html">À propos</a>
-	<a href="pollution.fr.html">Pollution et racisme environnemental</a>
-	<a href="phen_naturel.html">Phénomènes naturels et racisme environnemental</a>
+	<a href="apropos.html">Ã€ propos</a>
+	<a href="pollution_fr.html">Pollution et racisme environnemental</a>
+	<a href="phen_naturel.html">PhÃ©nomÃ¨nes naturels et racisme environnemental</a>
     </div> 	
   
     </body>
