--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
        
     <div class="souspage">
 	     <a href="about.html">About</a>
-	     <a href="pollution.html">Pollution and environmental racism</a>
-	     <a href="natural_phen.html">Natural phenomena and environmental racism</a>    
+	<a href="MapPollutants/MPindex.html">Pollution and environmental racism</a>
+	<a href="MapEnvironments/MEindex.html">Natural phenomena and environmental racism</a> 
     </div> 
  
     <div class="about">
