--- a/apropos.html
+++ b/apropos.html
@@ -15,8 +15,8 @@
        
     <div class="souspage">
 	     <a href="apropos.html">À propos</a>
-	     <a href="pollution_fr.html">Pollution et racisme environnemental</a>
-	     <a href="phen_naturel.html">Phénomènes naturels et racisme environnemental</a>    
+	     <a href="MapPollutantsFR/MPindexFR.html">Pollution et racisme environnemental</a>
+	     <a href="MapEnvironmentsFR/MEindexFR.html">Phénomènes naturels et racisme environnemental</a>    
     </div> 
  
     <div class="apropos">
