--- a/MapPollutants/MPindex.html
+++ b/MapPollutants/MPindex.html
@@ -3,7 +3,7 @@
     <head>
         
      <title>OPENSTREETMAP - Environmental racism in Canada</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
         
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
