--- a/MapPollutantsFR/MPindexFR.html
+++ b/MapPollutantsFR/MPindexFR.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8"/>
     <title>OPENSTREETMAP - Racisme environnemental au Canada</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
         
         <meta charset="utf-8">
