--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <html>
   <head>
 
+       <meta charset="utf-8"/>
+      
     <title>OPENSTREETMAP - Environmental racism in Canada</title>
     <link rel="stylesheet" href="style.css">
 
