--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </div> 
 
     <div class="text">
-		<p>In the 80s, the first studies on environmental racism have been done in the United-States and it was found that Black communities, as well as other minorities and poor neighborhoods, were more likely to be situated in areas where manufacturers, garbage dumps or hazardous materials landfills were common (Séguin & Apparicio, 2013 ; Lumen : Sociology, s.d.). Since then, researchers have analysed deeper the phenomenon and different definitions and types of justice have been developed.</p> 
+		<p>In the 80s, the first studies on environmental racism have been done in the United-States and it was found that African-American communities, as well as other minorities and poor neighborhoods, were more likely to be situated in areas where manufacturers, garbage dumps or hazardous materials landfills were common (Séguin & Apparicio, 2013 ; Lumen : Sociology, s.d.). Since then, researchers have analysed deeper the phenomenon and different definitions and types of justice have been developed.</p> 
     </div>    
 
     <img src="philippines.png" alt="déchets" style="float:right; padding: 25px;">
